[gd_scene load_steps=18 format=3 uid="uid://ci3lteqgnbq8c"]

[ext_resource type="Script" path="res://scripts/enemies/dart_fey.gd" id="1_10k3j"]
[ext_resource type="Texture2D" uid="uid://b63vi4yhdqx88" path="res://art/enemy sprites/DartFeyV1.png" id="2_pvdra"]
[ext_resource type="PackedScene" uid="uid://cn2bi5uhlbamd" path="res://scenes/other/vector_wheel.tscn" id="3_cv0do"]
[ext_resource type="PackedScene" uid="uid://ccmwkars1n0na" path="res://scenes/UI_and_the_like/hp_bar.tscn" id="4_imsof"]
[ext_resource type="Texture2D" uid="uid://eny37osmjycx" path="res://icon.svg" id="5_d3611"]

[sub_resource type="Animation" id="Animation_efxip"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_bn3i7"]
resource_name = "main"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hi3be"]
_data = {
"RESET": SubResource("Animation_efxip"),
"main": SubResource("Animation_bn3i7")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_howx3"]
animation = &"main"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j8n0i"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_vpgxb"]
states/main/node = SubResource("AnimationNodeAnimation_howx3")
states/main/position = Vector2(450.5, 107)
transitions = ["Start", "main", SubResource("AnimationNodeStateMachineTransition_j8n0i")]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5i7ga"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dgnv6"]
states/StateMachine/node = SubResource("AnimationNodeStateMachine_vpgxb")
states/StateMachine/position = Vector2(464, 82.5)
transitions = ["Start", "StateMachine", SubResource("AnimationNodeStateMachineTransition_5i7ga")]

[sub_resource type="CircleShape2D" id="CircleShape2D_agn4q"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ip82l"]
radius = 183.183

[sub_resource type="CircleShape2D" id="CircleShape2D_st8s6"]
radius = 224.377

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4tvk2"]
cull_mode = 1
polygon = PackedVector2Array(0.5, 0, 0, 0.5, -0.5, 0, 0, -0.5)

[node name="CharacterBody2DG" type="CharacterBody2D"]
y_sort_enabled = true
scale = Vector2(0.6, 0.6)
collision_layer = 540
collision_mask = 1026
script = ExtResource("1_10k3j")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_pvdra")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hi3be")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_dgnv6")
anim_player = NodePath("../AnimationPlayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_agn4q")

[node name="StateDurationTimer" type="Timer" parent="."]
one_shot = true

[node name="VisionField" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 96

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionField"]
position = Vector2(-0.178571, 0)
rotation = 3.14159
scale = Vector2(0.964286, 1)
polygon = PackedVector2Array(11.9136, 8.33336, 1.54322, -5, 3.27167, -26.6667, 22.284, -8.33328)

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionField"]
shape = SubResource("CircleShape2D_ip82l")

[node name="PlayerRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(-42, 94)
collision_mask = 66

[node name="WallRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(-90, 99)
collision_mask = 1026

[node name="LookForPlayerArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="LookForPlayerArea"]
visible = false
shape = SubResource("CircleShape2D_st8s6")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 0, 1)
debug_path_custom_line_width = 1.0

[node name="VectorWheel" parent="." instance=ExtResource("3_cv0do")]
scale = Vector2(0.5, 0.5)

[node name="DebugLabel" type="Label" parent="."]
visible = false
offset_left = -19.0
offset_top = -10.0
offset_right = 21.0
offset_bottom = 13.0

[node name="HPBar" parent="." instance=ExtResource("4_imsof")]
offset_left = -10.0
offset_top = -22.0
offset_right = 118.0
offset_bottom = 106.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
rotation = 3.14159
scale = Vector2(16, 16)
occluder = SubResource("OccluderPolygon2D_4tvk2")

[node name="DartTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(-15, -11)
scale = Vector2(0.117188, 0.046875)
texture = ExtResource("5_d3611")

[node name="Icon2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-6, 8)
scale = Vector2(0.117188, 0.046875)
texture = ExtResource("5_d3611")

[node name="Icon3" type="Sprite2D" parent="."]
visible = false
position = Vector2(11, -5)
scale = Vector2(0.117188, 0.046875)
texture = ExtResource("5_d3611")

[node name="DartRayCast2D" type="RayCast2D" parent="."]
collision_mask = 2
hit_from_inside = true

[connection signal="timeout" from="StateDurationTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="VisionField" to="." method="_on_vision_field_body_entered"]
[connection signal="body_entered" from="VisionField" to="." method="singal_test"]
[connection signal="timeout" from="DartTimer" to="." method="_on_dart_timer_timeout"]
